Use internal `Cookie` type to provide functionality `java.net.HttpCookie` does not